Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5606

Pen key does not bring up the FEP input method menu

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.6.0
    • 4.6.0
    • None
    • None
    • fe23fd01b4fc61b109bc81bcbac2f832929fb482

      Pushing the Pen key in a line edit gives no response on keypad phones. This makes it impossible to change the writing language on those phones.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jabarron Jason Barron
            axisnokia axisnokia (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes